--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "title": "yearofmoo-airpair-components-article-code",
   "devDependencies": {
+    "http-server": "^0.7.4",
+    "jasmine-core": "^2.1.3",
     "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.4",
     "karma-ng-html2js-preprocessor": "^0.1.2"
   }
 }
